--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "Arian Deimling, Fehintola Kofo-Idowu, Mir Patel",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "express-session-sequelize": "^2.3.0",
     "express-validator": "^6.14.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
