--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-minify": "^1.0.0",
     "express-session": "^1.17.2",
     "express-session-sequelize": "^2.3.0",
     "express-validator": "^6.14.0",
