converted from CommonJS to ES6 modules and fixed eslint issues

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "afm_interplanetary",
+  "type": "module",
   "version": "1.0.0",
   "description": "Website for AFM Interplanetary",
   "main": "server.js",
