--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "nodemon": "^2.0.15"
   },
   "repository": {
